--- a/html/index.html
+++ b/html/index.html
@@ -9,4 +9,7 @@
 
   <script> http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js
   </script>
+
+  $(div.image).append <img src =https://s3.amazonaws.com/learn-verified/painting-with-dog.gif/>
+
 </body>
